...
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/profile_icon_cd"
                app:srcCompat="@drawable/ic_action_user" />

            <TextView
                android:id="@+id/main_textview_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/nav_header_vertical_spacing"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                tools:text="Android Studio" />

            <TextView
                android:id="@+id/main_textview_user_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Subtitle"
                tools:text="android.studio@android.com" />

        </LinearLayout>
...
