<resources>
    <string name="app_name">BuddyBook</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_clear_search">Clear search history</string>
    <string name="action_export_csv">Export CSV</string>
    <string name="action_do_backup">Backup/Restore</string>
...
             This is an open source project and you can find the source code on my <a href="https://github.com/victoraldir/BuddyBook" >GitHub</a>.
              <br/>
              Below you can find open source libraries used in this project.
              <br/> If you find any <b>bug</b> or <b>suggestion</b>, please open an issue in here <a href="https://github.com/victoraldir/BuddyBook/issues" >Issues</a>
              <br/>
              <br/>
              Developed with \u2764 by <a href="https://about.me/victoraldir">Victor Neves</a>
    ]]>

        </string>

    <!-- TODO barcode stuff. Review them! -->
    <string name="ok">OK</string>
...
